--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicious Cycles</title>
+    <style>
+    body {background-color: #E7FBFB}
+    h1 { font-size: 4em;text-align: center;color: #010b5b}
+    </style>
 </head>
 <body>
 <header><h1>Vicious Cycles</h1></header>
